--- a/notebooks/data_understanding.ipynb
+++ b/notebooks/data_understanding.ipynb
@@ -14,12 +14,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pandasql as sqldf"
+    "from pandasql import sqldf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +124,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La info parece estar correcta y de acuerdo al glosario de raw data, se encuentra agrupada"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +287,7 @@
        "[169724 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,8 +297,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se entiende que esta tabla contiene los pedidos asignados a cada rider por mes, tipo de pago, cuantos se asigno y cuantos se rechazaron"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +448,7 @@
        "[118933 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,8 +458,397 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta tabla contiene todos los pedidos hechos a los riders por mes y tipo de pago, pero que únicamente son completadas. \n",
+    "\n",
+    "¿Puede suceder el caso de que haya de 100 ordenes asignadas y solo 95 sean completadas? "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rider_id</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>pay_type_processed</th>\n",
+       "      <th>assigned</th>\n",
+       "      <th>rejected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>265</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>270</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>184</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-01</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-01</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>208</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-01</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>133</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  rider_id year_month pay_type_processed  assigned  rejected\n",
+       "0   id_5764607523772434582    2022-10                CPB        48         0\n",
+       "1   id_5764607523772434582    2022-10               Card       265         0\n",
+       "2   id_5764607523772434582    2022-10                PPB        83         0\n",
+       "3   id_5764607523772434582    2022-11                CPB        58         0\n",
+       "4   id_5764607523772434582    2022-11               Card       270         0\n",
+       "5   id_5764607523772434582    2022-11                PPB        97         0\n",
+       "6   id_5764607523772434582    2022-12                CPB        50         0\n",
+       "7   id_5764607523772434582    2022-12               Card       184         0\n",
+       "8   id_5764607523772434582    2022-12                PPB        92         0\n",
+       "9   id_5764607523772434582    2023-01                CPB        43         0\n",
+       "10  id_5764607523772434582    2023-01               Card       208         0\n",
+       "11  id_5764607523772434582    2023-01                PPB        90         0\n",
+       "12  id_5764607523772434582    2023-02                CPB        52         0\n",
+       "13  id_5764607523772434582    2023-02               Card       133         0\n",
+       "14  id_5764607523772434582    2023-02                PPB        77         0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assigned_order[assigned_order['rider_id']=='id_5764607523772434582']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rider_id</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>pay_type_processed</th>\n",
+       "      <th>total_completed_orders_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-01</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-01</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-01</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>CPB</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>id_5764607523772434582</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>PPB</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  rider_id year_month pay_type_processed  \\\n",
+       "0   id_5764607523772434582    2022-10                CPB   \n",
+       "1   id_5764607523772434582    2022-10               Card   \n",
+       "2   id_5764607523772434582    2022-10                PPB   \n",
+       "3   id_5764607523772434582    2022-11                CPB   \n",
+       "4   id_5764607523772434582    2022-11               Card   \n",
+       "5   id_5764607523772434582    2022-11                PPB   \n",
+       "6   id_5764607523772434582    2022-12                CPB   \n",
+       "7   id_5764607523772434582    2022-12               Card   \n",
+       "8   id_5764607523772434582    2022-12                PPB   \n",
+       "9   id_5764607523772434582    2023-01                CPB   \n",
+       "10  id_5764607523772434582    2023-01               Card   \n",
+       "11  id_5764607523772434582    2023-01                PPB   \n",
+       "12  id_5764607523772434582    2023-02                CPB   \n",
+       "13  id_5764607523772434582    2023-02               Card   \n",
+       "14  id_5764607523772434582    2023-02                PPB   \n",
+       "\n",
+       "    total_completed_orders_count  \n",
+       "0                             20  \n",
+       "1                            159  \n",
+       "2                             54  \n",
+       "3                             37  \n",
+       "4                            168  \n",
+       "5                             56  \n",
+       "6                             31  \n",
+       "7                            135  \n",
+       "8                             58  \n",
+       "9                             27  \n",
+       "10                           168  \n",
+       "11                            68  \n",
+       "12                            32  \n",
+       "13                           105  \n",
+       "14                            58  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "completed_order[completed_order['rider_id']=='id_5764607523772434582']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Efectivamente, puede suceder casos donde sean asignados, pero no completados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -673,13 +1076,83 @@
        "[50202 rows x 10 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "courier_debt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta tabla contiene desde cuando trabaja el rider, el vehículo, último día de trabajo y la deuda acumulada en cada mes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Además, podemos darnos cuenta que el rider_id de la tabla de deuda está sin el guión abajo, lo cual se agregará en la pestaña de análisis**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['rider_id', 'first_online_date', 'vehicle_type', 'last_online_date',\n",
+       "       'debt_2022-10', 'debt_2022-11', 'debt_2022-12', 'debt_2023-01',\n",
+       "       'debt_2023-02', 'debt_2023-03'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "courier_debt.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "debt_2022-10    -6462321.22\n",
+       "debt_2022-11   -10662877.57\n",
+       "debt_2022-12   -15409667.21\n",
+       "debt_2023-01   -22863406.68\n",
+       "debt_2023-02   -31683406.04\n",
+       "debt_2023-03   -39335390.39\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "courier_debt[['debt_2022-10','debt_2022-11','debt_2022-12','debt_2023-01','debt_2023-02','debt_2023-03']].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si hacemos la conversión, esto quiere decir que para 2023-03, la deuda es de más de 2 millones de dólares!!!"
    ]
   }
  ],
@@ -699,7 +1172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
