--- a/notebooks/data_understanding.ipynb
+++ b/notebooks/data_understanding.ipynb
@@ -1096,6 +1096,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Será necesario hacer cambios en los tipos de fecha"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Además, podemos darnos cuenta que el rider_id de la tabla de deuda está sin el guión abajo, lo cual se agregará en la pestaña de análisis**"
    ]
   },
