--- a/notebooks/03_data_segmentation.ipynb
+++ b/notebooks/03_data_segmentation.ipynb
@@ -1699,20 +1699,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'courier_debt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mcourier_debt\u001b[49m[(courier_debt[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiferencia_dias\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7\u001b[39m) \u001b[38;5;241m&\u001b[39m (courier_debt[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdebt_2023-03\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m450\u001b[39m)]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'courier_debt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "a = courier_debt[(courier_debt['diferencia_dias'] <=7) & (courier_debt['debt_2023-03']<-450)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = courier_debt[courier_debt['debt_2023-03']>=-450]"
    ]
   },
   {
@@ -1721,7 +1724,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = courier_debt[(courier_debt['diferencia_dias'] >= 8 ) & (courier_debt['debt_2023-03']<-450)]"
+    "b = courier_debt[(courier_debt['diferencia_dias'] >= 8 ) & (courier_debt['debt_2023-03']<-450)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = courier_debt[courier_debt['debt_2023-03']>=-450]"
    ]
   },
   {
